--- a/usr.bin/file/Makefile
+++ b/usr.bin/file/Makefile
@@ -1,6 +1,7 @@
-# $FreeBSD: src/usr.bin/file/Makefile,v 1.30 2004/11/19 04:04:14 obrien Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/file/Makefile 268515 2014-07-11 00:00:00Z delphij $
 # Makefile for file(1) cmd.
-# Copyright (c) David E. O'Brien, 2000-2004
+# Copyright (c) David E. O'Brien, 2000-2004, 2009
 # Copyright (c) Ian F. Darwin 86/09/01 - see LEGAL.NOTICE.
 #
 # This software is not subject to any license of the American Telephone
@@ -21,18 +22,29 @@
 # 4. This notice may not be removed or altered.
 
 SRCDIR=	${.CURDIR}/../../contrib/file
-.PATH: ${SRCDIR}
+.PATH: ${SRCDIR}/src
+.PATH: ${SRCDIR}/doc
 
 PROG=	file
-
-WARNS?=	0
 
 MAGICPATH?=	/usr/share/misc
 
 CFLAGS+= -DMAGIC='"${MAGICPATH}/magic"' -DHAVE_CONFIG_H
-CFLAGS+= -I${.CURDIR}
+CFLAGS+= -I${.CURDIR}/../../lib/libmagic
 
 DPADD=	${LIBMAGIC} ${LIBZ}
 LDADD=	-lmagic -lz
 
+FILEVER!= awk '$$1 == "\#define" && $$2 == "VERSION" { print $$3; exit }' \
+			${.CURDIR}/../../lib/libmagic/config.h
+
+CLEANFILES+=	${MAN}
+
 .include <bsd.prog.mk>
+
+.for mp in ${MAN}
+${mp}: ${mp:C/[0-9]/man/}
+	sed -e 's/__FSECTION__/5/g' -e 's/__CSECTION__/1/g' \
+		-e 's/__VERSION__/${FILEVER}/g' \
+		-e 's,__MAGIC__,${MAGICPATH}/magic,g' ${.ALLSRC} > ${.TARGET}
+.endfor
