add missing files

--- a/.gitattributes
+++ b/.gitattributes
@@ -4032,6 +4032,7 @@ contrib/amd/amd/info_ndbm.c -text
 contrib/amd/amd/info_nis.c -text
 contrib/amd/amd/info_nisplus.c -text
 contrib/amd/amd/info_passwd.c -text
+contrib/amd/amd/info_sun.c svneol=native#text/plain
 contrib/amd/amd/info_union.c -text
 contrib/amd/amd/map.c -text
 contrib/amd/amd/mapc.c -text
@@ -4043,14 +4044,18 @@ contrib/amd/amd/ops_TEMPLATE.c -text
 contrib/amd/amd/ops_cachefs.c -text
 contrib/amd/amd/ops_cdfs.c -text
 contrib/amd/amd/ops_efs.c -text
+contrib/amd/amd/ops_ext.c svneol=native#text/plain
 contrib/amd/amd/ops_lofs.c -text
+contrib/amd/amd/ops_lustre.c svneol=native#text/plain
 contrib/amd/amd/ops_mfs.c -text
 contrib/amd/amd/ops_nfs.c -text
 contrib/amd/amd/ops_nfs3.c -text
+contrib/amd/amd/ops_nfs4.c svneol=native#text/plain
 contrib/amd/amd/ops_nullfs.c -text
 contrib/amd/amd/ops_pcfs.c -text
 contrib/amd/amd/ops_tfs.c -text
 contrib/amd/amd/ops_tmpfs.c -text
+contrib/amd/amd/ops_udf.c svneol=native#text/plain
 contrib/amd/amd/ops_ufs.c -text
 contrib/amd/amd/ops_umapfs.c -text
 contrib/amd/amd/ops_unionfs.c -text
@@ -4062,6 +4067,13 @@ contrib/amd/amd/rpc_fwd.c -text
 contrib/amd/amd/sched.c -text
 contrib/amd/amd/srvr_amfs_auto.c -text
 contrib/amd/amd/srvr_nfs.c -text
+contrib/amd/amd/sun2amd.8 svneol=native#text/plain
+contrib/amd/amd/sun2amd.c svneol=native#text/plain
+contrib/amd/amd/sun_map.c svneol=native#text/plain
+contrib/amd/amd/sun_map.h svneol=native#text/plain
+contrib/amd/amd/sun_map_parse.y -text
+contrib/amd/amd/sun_map_tok.l -text
+contrib/amd/amd/test1.sh svneol=native#text/plain
 contrib/amd/amq/amq.8 -text
 contrib/amd/amq/amq.c -text
 contrib/amd/amq/amq.h -text
@@ -4095,6 +4107,11 @@ contrib/amd/fsinfo/fsi_util.c -text
 contrib/amd/fsinfo/fsinfo.8 -text
 contrib/amd/fsinfo/fsinfo.c -text
 contrib/amd/fsinfo/fsinfo.h -text
+contrib/amd/fsinfo/null_gram.c svneol=native#text/plain
+contrib/amd/fsinfo/null_gram.h svneol=native#text/plain
+contrib/amd/fsinfo/null_gram.y -text
+contrib/amd/fsinfo/null_lex.c svneol=native#text/plain
+contrib/amd/fsinfo/null_lex.l -text
 contrib/amd/fsinfo/wr_atab.c -text
 contrib/amd/fsinfo/wr_bparam.c -text
 contrib/amd/fsinfo/wr_dumpset.c -text
@@ -4113,6 +4130,7 @@ contrib/amd/include/am_xdr_func.h -text
 contrib/amd/include/amq_defs.h -text
 contrib/amd/include/mount_headers1.h -text
 contrib/amd/include/mount_headers2.h -text
+contrib/amd/include/nfs_common.h svneol=native#text/plain
 contrib/amd/ldap-id.ms -text
 contrib/amd/ldap-id.txt -text
 contrib/amd/ldap.schema -text
