--- a/usr.sbin/bsnmpd/modules/snmp_netgraph/Makefile
+++ b/usr.sbin/bsnmpd/modules/snmp_netgraph/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/usr.sbin/bsnmpd/modules/snmp_netgraph/Makefile 152269 2005-11-10 10:14:57Z harti $
 #
 # Author: Harti Brandt <harti@freebsd.org>
 
