--- a/usr.sbin/bsnmpd/modules/snmp_bridge/Makefile
+++ b/usr.sbin/bsnmpd/modules/snmp_bridge/Makefile
@@ -1,5 +1,6 @@
-#
 # $MidnightBSD$
+#
+# $FreeBSD: stable/10/usr.sbin/bsnmpd/modules/snmp_bridge/Makefile 164997 2006-12-07 22:36:17Z syrinx $
 #
 
 MOD=	bridge
