--- a/kerberos5/lib/Makefile
+++ b/kerberos5/lib/Makefile
@@ -1,8 +1,18 @@
 # $MidnightBSD$
-# $FreeBSD: stable/10/kerberos5/lib/Makefile 233294 2012-03-22 08:48:42Z stas $
+# $FreeBSD: stable/10/kerberos5/lib/Makefile 311729 2017-01-09 01:29:20Z ngie $
 
-SUBDIR=	libasn1 libgssapi_krb5 libgssapi_ntlm libgssapi_spnego libhdb \
-	libheimntlm libwind libhx509 libkadm5clnt libkadm5srv libkafs5 libkrb5 \
-	libroken libsl libvers libkdc libheimsqlite libheimbase libheimipcc libheimipcs
+.include <bsd.own.mk>
+
+SUBDIR=	libasn1 libhdb \
+	libheimntlm libhx509 libkadm5clnt libkadm5srv libkafs5 libkrb5 \
+	libroken libsl libvers libkdc libwind libheimsqlite libheimbase libheimipcc libheimipcs
+
+SUBDIR_DEPEND_libkafs5=	libkrb5
+
+.if ${MK_GSSAPI} != "no"
+SUBDIR+=	libgssapi_krb5
+SUBDIR+=	libgssapi_ntlm
+SUBDIR+=	libgssapi_spnego
+.endif
 
 .include <bsd.subdir.mk>
