--- a/kerberos5/usr.sbin/Makefile
+++ b/kerberos5/usr.sbin/Makefile
@@ -1,5 +1,7 @@
-# $FreeBSD: stable/10/kerberos5/usr.sbin/Makefile 233294 2012-03-22 08:48:42Z stas $
+# $MidnightBSD$
+# $FreeBSD: stable/10/kerberos5/usr.sbin/Makefile 289252 2015-10-13 18:56:50Z bdrewery $
 
 SUBDIR=	iprop-log kstash ktutil
+SUBDIR_PARALLEL=
 
 .include <bsd.subdir.mk>
