--- a/kerberos5/usr.bin/Makefile
+++ b/kerberos5/usr.bin/Makefile
@@ -1,6 +1,8 @@
-# $FreeBSD: stable/10/kerberos5/usr.bin/Makefile 233294 2012-03-22 08:48:42Z stas $
+# $MidnightBSD$
+# $FreeBSD: stable/10/kerberos5/usr.bin/Makefile 289252 2015-10-13 18:56:50Z bdrewery $
 
 SUBDIR=	hxtool kadmin kcc kdestroy kgetcred kf kinit kpasswd krb5-config ksu \
 	string2key verify_krb5_conf
+SUBDIR_PARALLEL=
 
 .include <bsd.subdir.mk>
