--- a/kerberos5/tools/Makefile
+++ b/kerberos5/tools/Makefile
@@ -1,5 +1,7 @@
-# $FreeBSD: stable/10/kerberos5/tools/Makefile 233294 2012-03-22 08:48:42Z stas $
+# $MidnightBSD$
+# $FreeBSD: stable/10/kerberos5/tools/Makefile 289252 2015-10-13 18:56:50Z bdrewery $
 
 SUBDIR=	make-roken asn1_compile slc
+SUBDIR_PARALLEL=
 
 .include <bsd.subdir.mk>
