--- a/kerberos5/libexec/ipropd-master/Makefile
+++ b/kerberos5/libexec/ipropd-master/Makefile
@@ -1,4 +1,5 @@
-# $FreeBSD: stable/10/kerberos5/libexec/ipropd-master/Makefile 233294 2012-03-22 08:48:42Z stas $
+# $MidnightBSD$
+# $FreeBSD: stable/10/kerberos5/libexec/ipropd-master/Makefile 322535 2017-08-15 12:26:43Z cy $
 
 PROG=	ipropd-master
 MAN=	iprop.8
@@ -10,9 +11,6 @@ DPADD=	${LIBKADM5SRV} ${LIBHDB} ${LIBKRB5} ${LIBHX509} ${LIBROKEN} ${LIBVERS} \
 LDADD=	-lkadm5srv -lhdb -lkrb5 -lhx509 -lroken ${LIBVERS} \
 	-lasn1 -lcrypto -lcrypt -lcom_err ${LDAPLDADD}
 LDFLAGS=${LDAPLDFLAGS}
-
-foo::
-	echo ${LIBHX509}
 
 .include <bsd.prog.mk>
 
