--- a/kerberos5/libexec/kdc/Makefile
+++ b/kerberos5/libexec/kdc/Makefile
@@ -1,4 +1,5 @@
-# $FreeBSD: stable/10/kerberos5/libexec/kdc/Makefile 233294 2012-03-22 08:48:42Z stas $
+# $MidnightBSD$
+# $FreeBSD: stable/10/kerberos5/libexec/kdc/Makefile 287428 2015-09-03 11:33:33Z ume $
 
 PROG=	kdc
 MAN=	kdc.8
@@ -13,6 +14,7 @@ CFLAGS+=-I${KRB5DIR}/lib/krb5 -I${KRB5DIR}/lib/asn1 -I${KRB5DIR}/lib/roken \
 DPADD=	${LIBKDC} ${LIBHDB} ${LIBKRB5} ${LIBROKEN} ${LIBASN1} \
 	${LIBCRYPTO} ${LIBCRYPT} ${LIBVERS}
 LDADD=	-lkdc -lhdb -lkrb5 -lroken -lasn1 -lcrypto -lcrypt ${LIBVERS}
+LDFLAGS=${LDAPLDFLAGS}
 
 .include <bsd.prog.mk>
 
