--- a/kerberos5/libexec/digest-service/Makefile
+++ b/kerberos5/libexec/digest-service/Makefile
@@ -1,5 +1,5 @@
 # $MidnightBSD$
-# $FreeBSD: stable/10/kerberos5/libexec/digest-service/Makefile 276486 2014-12-31 23:25:37Z ngie $
+# $FreeBSD: stable/10/kerberos5/libexec/digest-service/Makefile 287428 2015-09-03 11:33:33Z ume $
 
 PROG=	digest-service
 MAN=
@@ -13,6 +13,7 @@ DPADD=	${LIBHDB} ${LIBKDC} ${LIBHEIMIPCS} ${LIBKRB5} ${LIBROKEN} ${LIBASN1} \
 	${LIBCRYPTO} ${LIBCRYPT} ${LIBVERS}
 LDADD=	-lhdb -lkdc -lheimipcs -lkrb5 -lroken -lasn1 -lcrypto -lcrypt \
 	${LIBVERS} -lheimntlm
+LDFLAGS=${LDAPLDFLAGS}
 USEPRIVATELIB= heimipcs
 
 .include <bsd.prog.mk>
