--- a/kerberos5/doc/Makefile
+++ b/kerberos5/doc/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/kerberos5/doc/Makefile 99425 2002-07-05 05:47:13Z ru $
 
 INFO=	heimdal
 SRCDIR=	${.CURDIR}/../../crypto/heimdal/doc
