add vt, architectures

--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -22,16 +22,18 @@
         ..
         engines
         ..
-	i18n
-	..
+        i18n
+        ..
+        private
+        ..
     ..
     lib32
-	dtrace
-	..
-	i18n
-	..
-    ..
-    lib32
+        dtrace
+        ..
+        i18n
+        ..
+        private
+        ..
     ..
     libdata
         gcc
@@ -44,7 +46,69 @@
         ..
     ..
     libexec
+        bsdconfig
+            020.docsinstall
+                include
+                ..
+            ..
+            030.packages
+                include
+                ..
+            ..
+            040.password
+                include
+                ..
+            ..
+            050.diskmgmt
+                include
+                ..
+            ..
+            070.usermgmt
+                include
+                ..
+            ..
+            080.console
+                include
+                ..
+            ..
+            090.timezone
+                include
+                ..
+            ..
+            110.mouse
+                include
+                ..
+            ..
+            120.networking
+                include
+                ..
+            ..
+            130.security
+                include
+                ..
+            ..
+            140.startup
+                include
+                ..
+            ..
+            150.ttys
+                include
+                ..
+            ..
+            dot
+                include
+                ..
+            ..
+            include
+            ..
+            includes
+                include
+                ..
+            ..
+        ..
         bsdinstall
+        ..
+        hyperv
         ..
         lpr
             ru
@@ -62,7 +126,27 @@
     sbin
     ..
     share
+        atf
+        ..
+        bsdconfig
+            media
+            ..
+            networking
+            ..
+            packages
+            ..
+            password
+            ..
+            startup
+            ..
+            timezone
+            ..
+            usermgmt
+            ..
+        ..
         calendar
+            de_AT.ISO_8859-15
+            ..
             de_DE.ISO8859-1
             ..
             fr_FR.ISO8859-1
@@ -71,7 +155,13 @@
             ..
             hu_HU.ISO8859-2
             ..
+            pt_BR.ISO8859-1
+            ..
+            pt_BR.UTF-8
+            ..
             ru_RU.KOI8-R
+            ..
+            ru_RU.UTF-8
             ..
             uk_UA.KOI8-U
             ..
@@ -82,6 +172,8 @@
         ..
         doc
             IPv6
+            ..
+            atf
             ..
             atm
             ..
@@ -100,8 +192,24 @@
             ncurses
             ..
             ntp
+                drivers
+                    icons
+                    ..
+                    scripts
+                    ..
+                ..
+                hints
+                ..
+                icons
+                ..
+                pic
+                ..
+                scripts
+                ..
             ..
             papers
+            ..
+            pjdfstest
             ..
             psd
                 01.cacm
@@ -198,6 +306,10 @@
                 ..
             ..
         ..
+        dtrace
+            toolkit
+            ..
+        ..
         examples
             IPv6
             ..
@@ -281,8 +393,6 @@
             ..
             pf
             ..
-            portal
-            ..
             ppi
             ..
             ppp
@@ -317,10 +427,10 @@
             ..
             tcsh
             ..
+            uefisign
+            ..
         ..
         games
-            atc
-            ..
             fortune
             ..
             larn
@@ -425,25 +535,25 @@
             ..
             ca_AD.ISO8859-1
             ..
-            ca_ES.ISO8859-1
-            ..
-            ca_FR.ISO8859-1
-            ..
-            ca_IT.ISO8859-1
-            ..
             ca_AD.ISO8859-15
-            ..
-            ca_ES.ISO8859-15
-            ..
-            ca_FR.ISO8859-15
-            ..
-            ca_IT.ISO8859-15
             ..
             ca_AD.UTF-8
             ..
+            ca_ES.ISO8859-1
+            ..
+            ca_ES.ISO8859-15
+            ..
             ca_ES.UTF-8
             ..
+            ca_FR.ISO8859-1
+            ..
+            ca_FR.ISO8859-15
+            ..
             ca_FR.UTF-8
+            ..
+            ca_IT.ISO8859-1
+            ..
+            ca_IT.ISO8859-15
             ..
             ca_IT.UTF-8
             ..
@@ -566,8 +676,6 @@
             fr_FR.ISO8859-15
             ..
             fr_FR.UTF-8
-            ..
-            gl_ES.ISO8859-1
             ..
             he_IL.UTF-8
             ..
@@ -763,7 +871,11 @@
             cat4
                 amd64
                 ..
+                arm
+                ..
                 i386
+                ..
+                powerpc
                 ..
                 sparc64
                 ..
@@ -778,6 +890,8 @@
                 amd64
                 ..
                 i386
+                ..
+                powerpc
                 ..
                 sparc64
                 ..
@@ -794,7 +908,11 @@
                 cat4
                     amd64
                     ..
+                    arm
+                    ..
                     i386
+                    ..
+                    powerpc
                     ..
                     sparc64
                     ..
@@ -809,6 +927,8 @@
                     amd64
                     ..
                     i386
+                    ..
+                    powerpc
                     ..
                     sparc64
                     ..
@@ -826,7 +946,11 @@
                 cat4
                     amd64
                     ..
+                    arm
+                    ..
                     i386
+                    ..
+                    powerpc
                     ..
                     sparc64
                     ..
@@ -841,6 +965,8 @@
                     amd64
                     ..
                     i386
+                    ..
+                    powerpc
                     ..
                     sparc64
                     ..
@@ -896,7 +1022,11 @@
             man4
                 amd64
                 ..
+                arm
+                ..
                 i386
+                ..
+                powerpc
                 ..
                 sparc64
                 ..
@@ -911,6 +1041,8 @@
                 amd64
                 ..
                 i386
+                ..
+                powerpc
                 ..
                 sparc64
                 ..
@@ -1300,6 +1432,12 @@
             catalog
             ..
         ..
+        vt
+            fonts
+            ..
+            keymaps
+            ..
+        ..
         zoneinfo
             Africa
             ..
@@ -1330,6 +1468,8 @@
             Indian
             ..
             Pacific
+            ..
+            SystemV
             ..
         ..
     ..
