--- a/.gitattributes
+++ b/.gitattributes
@@ -20408,6 +20408,94 @@ contrib/libstdc++/src/tree.cc -text
 contrib/libstdc++/src/valarray-inst.cc -text
 contrib/libstdc++/src/wlocale-inst.cc -text
 contrib/libstdc++/src/wstring-inst.cc -text
+contrib/libucl/Makefile.am -text
+contrib/libucl/Makefile.unix -text
+contrib/libucl/Makefile.w32 -text
+contrib/libucl/README.md -text
+contrib/libucl/autogen.sh -text
+contrib/libucl/cmake/CMakeLists.txt -text
+contrib/libucl/configure.ac -text
+contrib/libucl/doc/Makefile.am -text
+contrib/libucl/doc/api.md -text
+contrib/libucl/doc/libucl.3 -text
+contrib/libucl/doc/pandoc.template -text
+contrib/libucl/include/ucl.h -text
+contrib/libucl/libucl.pc.in -text
+contrib/libucl/src/Makefile.am -text
+contrib/libucl/src/tree.h -text
+contrib/libucl/src/ucl_chartable.h -text
+contrib/libucl/src/ucl_emitter.c -text
+contrib/libucl/src/ucl_hash.c -text
+contrib/libucl/src/ucl_hash.h -text
+contrib/libucl/src/ucl_internal.h -text
+contrib/libucl/src/ucl_parser.c -text
+contrib/libucl/src/ucl_schema.c -text
+contrib/libucl/src/ucl_util.c -text
+contrib/libucl/src/xxhash.c -text
+contrib/libucl/src/xxhash.h -text
+contrib/libucl/stamp-h.in -text
+contrib/libucl/tests/Makefile.am -text
+contrib/libucl/tests/basic.test -text
+contrib/libucl/tests/basic/1.in -text
+contrib/libucl/tests/basic/1.res -text
+contrib/libucl/tests/basic/10.in -text
+contrib/libucl/tests/basic/2.in -text
+contrib/libucl/tests/basic/2.res -text
+contrib/libucl/tests/basic/3.in -text
+contrib/libucl/tests/basic/3.res -text
+contrib/libucl/tests/basic/4.in -text
+contrib/libucl/tests/basic/4.res -text
+contrib/libucl/tests/basic/6.in -text
+contrib/libucl/tests/basic/6.res -text
+contrib/libucl/tests/basic/8.in -text
+contrib/libucl/tests/basic/8.res -text
+contrib/libucl/tests/basic/9-comment.inc -text
+contrib/libucl/tests/basic/9-empty.inc -text
+contrib/libucl/tests/basic/9.in -text
+contrib/libucl/tests/basic/9.inc -text
+contrib/libucl/tests/basic/9.res -text
+contrib/libucl/tests/generate.res -text
+contrib/libucl/tests/generate.test -text
+contrib/libucl/tests/run_tests.sh -text
+contrib/libucl/tests/schema.test -text
+contrib/libucl/tests/schema/additionalItems.json -text
+contrib/libucl/tests/schema/additionalProperties.json -text
+contrib/libucl/tests/schema/allOf.json -text
+contrib/libucl/tests/schema/anyOf.json -text
+contrib/libucl/tests/schema/definitions.json -text
+contrib/libucl/tests/schema/dependencies.json -text
+contrib/libucl/tests/schema/enum.json -text
+contrib/libucl/tests/schema/items.json -text
+contrib/libucl/tests/schema/maxItems.json -text
+contrib/libucl/tests/schema/maxLength.json -text
+contrib/libucl/tests/schema/maxProperties.json -text
+contrib/libucl/tests/schema/maximum.json -text
+contrib/libucl/tests/schema/minItems.json -text
+contrib/libucl/tests/schema/minLength.json -text
+contrib/libucl/tests/schema/minProperties.json -text
+contrib/libucl/tests/schema/minimum.json -text
+contrib/libucl/tests/schema/multipleOf.json -text
+contrib/libucl/tests/schema/not.json -text
+contrib/libucl/tests/schema/oneOf.json -text
+contrib/libucl/tests/schema/pattern.json -text
+contrib/libucl/tests/schema/patternProperties.json -text
+contrib/libucl/tests/schema/properties.json -text
+contrib/libucl/tests/schema/ref.json -text
+contrib/libucl/tests/schema/refRemote.json -text
+contrib/libucl/tests/schema/required.json -text
+contrib/libucl/tests/schema/type.json -text
+contrib/libucl/tests/schema/uniqueItems.json -text
+contrib/libucl/tests/speed.test -text
+contrib/libucl/tests/test_basic.c -text
+contrib/libucl/tests/test_generate.c -text
+contrib/libucl/tests/test_schema.c -text
+contrib/libucl/tests/test_speed.c -text
+contrib/libucl/uthash/uthash.h -text
+contrib/libucl/uthash/utlist.h -text
+contrib/libucl/uthash/utstring.h -text
+contrib/libucl/utils/Makefile.am -text
+contrib/libucl/utils/chargen.c -text
+contrib/libucl/utils/objdump.c -text
 contrib/libyaml/LICENSE -text
 contrib/libyaml/Makefile.am -text
 contrib/libyaml/Makefile.in -text
