--- a/contrib/tzdata/Makefile
+++ b/contrib/tzdata/Makefile
@@ -191,6 +191,8 @@ LDLIBS=
 #  -DHAVE_LOCALTIME_R=0 if your system lacks a localtime_r function
 #  -DHAVE_LOCALTIME_RZ=0 if you do not want zdump to use localtime_rz
 #	localtime_rz can make zdump significantly faster, but is nonstandard.
+#  -DHAVE_POSIX_DECLS=0 if your system's include files do not declare
+#	functions like 'link' or variables like 'tzname' required by POSIX
 #  -DHAVE_SNPRINTF=0 if your system lacks the snprintf function
 #  -DHAVE_STDBOOL_H if you have a non-C99 compiler with <stdbool.h>
 #  -DHAVE_STDINT_H if you have a non-C99 compiler with <stdint.h>
