--- a/usr.sbin/accton/Makefile
+++ b/usr.sbin/accton/Makefile
@@ -1,9 +1,8 @@
+# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: src/usr.sbin/accton/Makefile,v 1.7 2002/07/11 22:29:11 alfred Exp $
+# $FreeBSD: stable/10/usr.sbin/accton/Makefile 201390 2010-01-02 11:07:44Z ed $
 
 PROG=	accton
 MAN=	accton.8
-
-WARNS?=	4
 
 .include <bsd.prog.mk>
