--- a/lib/Makefile
+++ b/lib/Makefile
@@ -132,7 +132,7 @@ SUBDIR_DEPEND_libc++= libcxxrt
 SUBDIR_DEPEND_libc= libcompiler_rt
 SUBDIR_DEPEND_libcam= libsbuf
 SUBDIR_DEPEND_libdevstat= libkvm
-SUBDIR_DEPEND_libdispatch= libblocksruntime
+SUBDIR_DEPEND_libdispatch= ${_libthr} libblocksruntime
 SUBDIR_DEPEND_libdpv= libfigpar ncurses libutil
 SUBDIR_DEPEND_libedit= ncurses
 SUBDIR_DEPEND_libg++= msun
