--- a/sbin/mount_nullfs/Makefile
+++ b/sbin/mount_nullfs/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	8.3 (Berkeley) 3/27/94
 # $MidnightBSD$
+#	@(#)Makefile	8.3 (Berkeley) 3/27/94
+# $FreeBSD: stable/10/sbin/mount_nullfs/Makefile 198236 2009-10-19 16:00:24Z ru $
 
 PROG=	mount_nullfs
 SRCS=	mount_nullfs.c getmntopts.c
